fix new colletion gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,10 +612,10 @@ footer {
     max-width: 280px;
   }
 
-
   .new-collection {
     flex-direction: column;
     margin: 0 80px 74px 80px;
+    gap: 32px;
   }
 
   .new-collection img {
